--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    {% include "partials/header.html" %}
+    <header>
+        {% include "partials/nav.html" %}
+        {% block search_form %}
+        <form action="{% url "rooms:search" %}">
+            <input type="text" placeholder="Searching by city" name="city" />
+        </form>
+        {% endblock %}
+    </header>
+
 
     {% block content %}
     {% endblock %}
