#18 KaKao Login + #19 TailwindCSS setting up  completed

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -4,6 +4,7 @@
     <li><a href="{% url "users:logout" %}">Log out</a></li>
     {% else %}
     <li><a href="{% url "users:login" %}">Login</a></li>
+    <li><a href="{% url "users:kakao-login" %}">Continue with Kakao</a></li>
     <li><a href="{% url "users:signup" %}">Sign up</a></li>
     {% endif %}
 </ul>
