--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,3 +1,39 @@
 @tailwind base;
-@tailwind components
-@utilities;
+@tailwind components;
+
+
+.search-box{
+    transition: box-shadow 0.3s linear;
+}
+
+.nav_link{
+    @apply ml-8 border-b-2 border-white h-full flex items-center;
+    a {
+        @apply py-10 px-5;
+    }
+    &:hover{
+        @apply border-gray-600;
+    }
+}
+
+.btn {
+    @apply font-light text-center text-lg w-full rounded-sm py-5;
+}
+
+input {
+    @apply btn text-left border border-gray-600 px-5;
+    &:focus{
+        @apply outline-none border-teal-500;
+    }
+}
+
+form .input{
+    @apply mb-3;
+    &.has_error {
+        input {
+            @apply bg-red-200;
+        }
+    }
+}
+
+@tailwind utilities;
