--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -1,26 +1,36 @@
 {% extends "base.html" %}
 
 {% block content %}
-{{now}}
-{% for room in object_list %}
-<h4><a href="{% url "rooms:detail" room.pk %}">{{room.name}} / {{room.price}}</a></h4>
-{% endfor %}
 
-<h5>
-    {% if page_obj.has_previous %}
-    <a href="?page={{page_obj.previous_page_number}}">Previous</a>
-    {% endif %}
+<div class="container mx-auto pb-10">
+    <div class=" mt-32 mb-24 bg-gray-800 h-50vh rounded-xl  bg-center bg-cover -mx-40"
+        style="background-image:url(
+    https://images.unsplash.com/photo-1555425293-49cfbbb28dff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80)"> </div>
+    <div class="flex flex-wrap -mx-40 mb-10">
+        {% for room in object_list %}
+        {% include "rooms/room_card.html" with room=room %}
+        {% endfor %}
+    </div>
 
-    Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
 
-    {% if page_obj.has_next %}
-    <a href="?page={{page_obj.next_page_number}}">Next</a>
-    {% endif %}
-</h5>
-<div>
-    {% for page in page_obj.paginator.page_range %}
-    <a href="?page={{page}}">{{page}}</a>
-    {% endfor %}
+    <div class="flex items-center justify-center">
+        {% if page_obj.has_previous %}
+        <a href="?page={{page_obj.previous_page_number}}" class="text-teal-500"><i
+                class="fas fa-arrow-left fa-lg"></i></a>
+        {% endif %}
+
+        <span class="mx-3 font-medium text-lg">{{page_obj.number}} of {{page_obj.paginator.num_pages}}</span>
+
+        {% if page_obj.has_next %}
+        <a href="?page={{page_obj.next_page_number}}" class="text-teal-500"><i class="fas fa-arrow-right fa-lg"></i></a>
+        {% endif %}
+    </div>
+    <div>
+        {% for page in page_obj.paginator.page_range %}
+        <a href="?page={{page}}">{{page}}</a>
+        {% endfor %}
+    </div>
 </div>
+
 
 {% endblock %}
