--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block page_title %}{% endblock %} | Nbnb</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
 </head>
 
-<body>
-    <header>
+<body class="text-gray-700 mt-24 font-light">
+    <div class="absolute top-0  left-0 right-0 z-10 flex justify-center">
+        {% include "partials/messages.html" %}
+    </div>
+
+    <header
+        class="container max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed bg-white inset-0">
+        <div class="flex items-center w-1/3">
+            <a href="{% url "core:home" %}" class="mr-6">
+                <img class="w-12" src="{% static 'img/logo.png' %}" />
+            </a>
+            {% block search_form %}
+            <form action="{% url "rooms:search" %}" class="w-9/12">
+                <input
+                    class="search-box w-full border px-5 py-3 font-medium text-gray-900 placeholder-gray-700 rounded-lg shadow-md hover:shadow-lg focus:outline-none"
+                    type="text" placeholder="Searching by city" name="city" />
+            </form>
+            {% endblock %}
+        </div>
+
         {% include "partials/nav.html" %}
-        {% block search_form %}
-        <form action="{% url "rooms:search" %}">
-            <input type="text" placeholder="Searching by city" name="city" />
-        </form>
-        {% endblock %}
     </header>
 
 
