--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,3 @@
-<footer>
-    <hr />
-    &copy; Nbnb
+<footer class="container mx-auto text-center py-10 border-t font-medium text-gray-600">
+    &copy;2020 Nbnb, Inc. All rights reserved.
 </footer>
