--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,10 +1,8 @@
-<a href="{% url "core:home" %}">Home</a>
-<ul>
+<ul class="flex items-center text-sm font-semibold h-full">
     {% if user.is_authenticated %}
-    <li><a href="{% url "users:logout" %}">Log out</a></li>
+    <li class="nav_link"><a href="{% url "users:logout" %}">Log out</a></li>
     {% else %}
-    <li><a href="{% url "users:login" %}">Login</a></li>
-    <li><a href="{% url "users:kakao-login" %}">Continue with Kakao</a></li>
-    <li><a href="{% url "users:signup" %}">Sign up</a></li>
+    <li class="nav_link"><a href="{% url "users:login" %}">Login</a></li>
+    <li class="nav_link"><a href="{% url "users:signup" %}">Sign up</a></li>
     {% endif %}
 </ul>
