--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,11 +4,16 @@
 {% endblock %}
 
 {% block content %}
+<div class="container mx-auto lg:w-5/12 md:w-1/2 xl:w-1/4 flex flex-col items-center border border-gray-400 p-6">
+    {% include 'users/social_login.html' %}
+    {% include 'mixins/auth/auth_form.html' with form=form ctm="Log in" %}
 
-<form method="POST" action="{% url "users:login" %}">
-    {% csrf_token %}
-    {{ form.as_p}}
-    <button>Login</button>
-</form>
+    <div class="mt-5">
+        <span class="mr-2">Dont't have an account?</span>
+        <a href="{% url 'users:signup' %}" class="font-medium text-teal-500">Sign up</a>
+
+    </div>
+</div>
+
 
 {% endblock %}
