--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -4,11 +4,13 @@
 {% endblock %}
 
 {% block content %}
+<div class="container mx-auto lg:w-5/12 md:w-1/2 xl:w-1/4 flex flex-col items-center border border-gray-400 p-6">
+    {% include 'mixins/auth/auth_form.html' with form=form ctm="Sign up" %}
+    <div class="mt-5">
+        <span class="mr-2">Have an account?</span>
+        <a href="{% url 'users:login' %}" class="font-medium text-teal-500">Log in</a>
 
-<form method="POST" action="{% url "users:signup" %}">
-    {% csrf_token %}
-    {{ form.as_p}}
-    <button>Sign up</button>
-</form>
+    </div>
+</div>
 
 {% endblock %}
