--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -1,13 +1,138 @@
 {% extends "base.html" %}
+{% load booked on_favs %}
 
 {% block content %}
+
+<div class="-mt-5 container max-w-full h-75vh flex mb-20">
+    <div class="h-full w-1/2 border" style="background-image:url({{room.first_photo}});"></div>
+    <div class="h-full w-1/2 flex flex-wrap">
+        {% for photo in room.get_next_four_photos %}
+        <div style="background-image:url({{photo.file.url}});" class="h-auto w-1/2 bg-cover bg-center border-gray-700">
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
+<div class="container mx-auto flex justify-around pb-56 border">
+    <div class="w-1/2">
+        <div class="flex justify-between">
+            <div class="mb-5">
+                <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
+                <span class="text-gray-700 font-light">{{room.city}}</span>
+            </div>
+            <a href="{{room.host.get_absolute_url}}" class="flex flex-col items-center">
+                {% include "mixins/user_avatar.html" with user=room.host %}
+                <span class="mt-2 text-gray500">{{room.host.first_name}}</span>
+            </a>
+        </div>
+        {% on_favs room as on_favs_boolean%}
+        {% if on_favs_boolean %}
+        <a href="{% url 'lists:toggle-room' room.pk %}?action=remove"
+            class="block mb-10 w-2/6 text-teal-600 font-bold">Remove from favourite</a>
+        {% else %}
+        <a href="{% url 'lists:toggle-room' room.pk %}?action=add" class="block mb-10 w-2/6 text-teal-600 font-bold">Add
+            to favourite</a>
+        {% endif %}
+        <div class="flex border-section">
+            <span class="mr-5 font-light">{{room.room_type}}</span>
+            <span class="mr-5 font-light">{{room.beds}} bed{{room.beds|pluralize}}</span>
+            <span class="mr-5 font-light">{{room.bedrooms}} bedroom{{room.bedrooms|pluralize}}</span>
+            <span class="mr-5 font-light">{{room.baths}} bath{{room.baths|pluralize}}</span>
+            <span class="mr-5 font-light">{{room.guests}} guest{{room.guests|pluralize}}</span>
+        </div>
+        <p class="border-section">
+            {{room.description}}
+        </p>
+        <div class="border-section">
+            <h4 class="font-medium text-lg mb-5">Amenities</h4>
+            {% for a in room.amenities.all %}
+            <li class="mb-2">{{a}}</li>
+            {% endfor %}
+        </div>
+        <div class="border-section">
+            <h4 class="font-medium text-2xl mb-5">Reviews</h4>
+            <div class="flex items-center">
+                <div class="mr-5">
+                    <i class="fas fa-star text-teal-500"></i>
+                    <span class="font-bold text-xl">{{room.review_average}}</span>
+                </div>
+                <div class="h-5 w-px bg-ray-400"></div>
+                {{room.reviews.count}} review{{room.reviews.count|pluralize}}
+            </div>
+        </div>
+        <div class="mt-10">
+            {% for review in room.reviews.all %}
+            <div class="border-section">
+                <div class="mb-3 flex">
+                    <div>
+                        {% include "mixins/user_avatar.html" with user=review.user h_and_w='w-10 h-10' text='text-xl' %}
+                    </div>
+                    <div class="flex flex-col ml-5">
+                        <span class="font-medium">{{review.user.first_name}}</span>
+                        <span class="text-sm text-gray-500">{{review.created_at|date:'F Y'}}</span>
+                    </div>
+                </div>
+                <p>{{review.review}}</p>
+
+            </div>
+            {% endfor %}
+        </div>
+
+
+    </div>
+
+    <div class="w-1/3">
+        <a href="{% url "rooms:edit" room.pk %}" class=" btn-link block">Edit Room </a>
+        {% if room.host == user %}
+        <a href="{% url "rooms:edit" room.pk %}" class=" btn-link block">Edit Room </a>
+        {% else %}
+        {% if not request.session.is_hosting %}
+        <div>
+            {% for cal in room.get_calendars %}
+            <div class="text-center font-medium text-lg block m-8">{{cal.get_month}}/{{cal.year}}</div>
+            <div class="calendar-grid mb-4">
+                {% for week_day in cal.week_days %}
+                <span>{{week_day}}</span>
+                {% endfor %}
+            </div>
+            <div class="calendar-grid">
+                {% for date in cal.get_dates %}
+                {% room_booked room date as is_booked %}
+                {% if date.date != 0 %}
+                {% if date.is_past %}
+                <span class="bg-gray-200 w-full text-center text-gray-500 p-1 rounded ">{{ date.date }}</span>
+
+                {% elif is_booked %}
+                <span
+                    class="bg-gray-200 w-full text-center text-gray-500 p-1 rounded line-through">{{ date.date }}</span>
+
+                {% else %}
+                <a href="{% url 'reservations:create' room.pk date.year date.month date.date %}" class="bg-gray-200 w-full text-center text-gray-700 p-1 rounded hover:bg-teal-400 hover:text-white
+                    hover:font-medium cursor-pointer">{{ date.date }}</a>
+                {% endif %}
+
+
+                {% else %}
+                <span></span>
+                {% endif %}
+                {% endfor %}
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        {% endif %}
+    </div>
+</div>
+
+
+
 <div>
     <h1> {{room.name}}</h1>
     <h3> {{room.description}}</h3>
 </div>
 
 <div>
-    <h2>By: {{room.host.username}}
+    <h2>By: <a href="{% url "users:profile" room.host.pk %}">{{room.host.username}}</a>
         {% if room.host.superuser %} (superhost) {% endif %}
     </h2>
     <h3>Amenities</h3>
@@ -32,5 +157,4 @@
     </ul>
 
 </div>
-
 {% endblock %}
