--- a/rooms/templates/rooms/room_list.html
+++ b/rooms/templates/rooms/room_list.html
@@ -13,7 +13,7 @@
     </div>
 
 
-    <div class="flex items-center justify-center">
+    <div class="container mx-auto flex items-center justify-center ">
         {% if page_obj.has_previous %}
         <a href="?page={{page_obj.previous_page_number}}" class="text-teal-500"><i
                 class="fas fa-arrow-left fa-lg"></i></a>
