--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,5 +1,18 @@
 <ul class="flex items-center text-sm font-semibold h-full">
     {% if user.is_authenticated %}
+
+    <li class="nav_link">
+        <a href="{% url "users:switch-hosting" %}">
+            {% if request.session.is_hosting %}
+            Stop hosting
+            {% else %}
+            Start hosting
+
+            {% endif %}
+        </a>
+    </li>
+    <li class="nav_link"><a href="{% url "lists:favs" %}">Favs</a></li>
+    <li class="nav_link"><a href="{% url "users:profile" user.pk %}">Profile</a></li>
     <li class="nav_link"><a href="{% url "users:logout" %}">Log out</a></li>
     {% else %}
     <li class="nav_link"><a href="{% url "users:login" %}">Login</a></li>
